# fastapiepgtimeshift

./: .dockerignore  .gitignore  Dockerfile  README.md  create_offset_epg.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image-dev.yml  docker-image.yml
Config/: combine_epg.json  config.env  offset_config.json
Functions/: config.py  create_combined_epg.py  create_offset_epg.py  cron_schedule.py  download_epg.py  download_epg_files.py  logging_config.py
