[project]
name = "fastapiepgtimeshift"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.13.0",
    "apscheduler>=3.11.2",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
